Create NumberInWords service and alter NumberInWords controller
